<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maxDark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/orange"
        android:layout_height="180dp">

        <TextView
            android:id="@+id/taskTitle"
            android:textSize="30sp"
            android:textColor="#FFF"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/prevTimeSpent"
            android:textSize="26sp"
            android:textColor="#FFF"
            android:textAlignment="center"
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-60dp"
        android:layout_marginRight="16dp"
        android:background="@color/medDark"
        android:orientation="vertical"
        android:paddingTop="22dp"
        android:paddingBottom="22dp">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="56sp"
            android:textColor="@color/orange"/>

        <Chronometer
            android:id="@+id/chronometerTwo"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="0dp"
            android:textSize="0sp"
            android:textColor="@color/orange"/>
    </LinearLayout>

    <Button
        android:id="@+id/startTimerButton"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/startTimer"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@color/orange"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:onClick="startChronometer"/>

    <Button
        android:id="@+id/pauseTimerButton"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/pauseTimer"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@color/orange"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:onClick="pauseChronometer"/>

    <Button
        android:id="@+id/saveTimerButton"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/saveTimer"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@color/orange"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:onClick="saveTimer"/>

    <Button
        android:id="@+id/completeTaskButton"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/completed"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@color/orange"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:onClick="deleteTask"/>

    <Button
        android:id="@+id/closeButton"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/close"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@color/lightDark"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:onClick="backToMain"/>
</LinearLayout>